--- a/egs/timit/s5/scripts/template.cfg
+++ b/egs/timit/s5/scripts/template.cfg
@@ -1,6 +1,7 @@
 [data]
-train = DATA_PREFIX/train/train.feats
-dev = DATA_PREFIX/dev/dev.feats
+train = DATA_PREFIX/train.feats
+dev = DATA_PREFIX/dev.feats
+test = DATA_PREFIX/test.feats
 out_file = |
 format = kaldi
 xdim = 13
