--- a/egs/timit/s5/scripts/template.cfg
+++ b/egs/timit/s5/scripts/template.cfg
@@ -6,7 +6,7 @@ out_file = |
 format = kaldi
 xdim = 13
 ydim = OUTPUT_DIM
-label_mean = label_mean.feats
+label_mean = DATA_PREFIX/label_mean.feats
 [arch]
 num_hidden = 1024
 # set it to zero if you want a regular LSTM
@@ -29,7 +29,7 @@ method = truncated-bptt
 #method = bucketing
 
 # checkpoint prefix
-prefix = DATASET
+prefix = MODEL_PREFIX
 
 learning_rate = 1
 decay_factor = 2
