--- a/egs/timit/s5/scripts/template.cfg
+++ b/egs/timit/s5/scripts/template.cfg
@@ -3,6 +3,7 @@ train = DATA_PREFIX/train.feats
 dev = DATA_PREFIX/dev.feats
 test = DATA_PREFIX/test.feats
 out_file = |
+out_dir = MX_DEOCDE_DIR
 format = kaldi
 xdim = 13
 ydim = OUTPUT_DIM
