timit phone recognize

--- a/egs/timit/s5/global.cfg
+++ b/egs/timit/s5/global.cfg
@@ -1,9 +1,11 @@
 kaldi_root=/home/sooda/speech/kaldi
 dataset=timit
-nj=4
+nj=8
 stage=0
-num_epoch=1
+num_epoch=25
 ali_dir=exp/tri3_ali
 graph_dir=exp/tri3/graph
 train_dir=data/train
 dev_dir=data/dev
+lang_dir=data/lang
+phone_rec=0
