thchs phonerec rec

--- a/egs/thchs30/s5/global.cfg
+++ b/egs/thchs30/s5/global.cfg
@@ -2,8 +2,9 @@ kaldi_root=/home/sooda/speech/kaldi
 dataset=thchs30
 nj=8
 stage=0
-num_epoch=1
+num_epoch=25
 ali_dir=exp/tri4b_ali
 graph_dir=exp/tri4b/graph_phone
 train_dir=data/mfcc/train
 dev_dir=data/mfcc/test_phone
+lang_dir=data/graph_phone/lang
